# finance-api

./: .env.example  Makefile  defasagem.py  docker-compose.yml  fundamentus-scrapper.py  fundamentus_module.py  html_export.py  investidor10_module.py  main.py  models.py  pyproject.toml  relatorio.html  requirements.txt  scrape-invest.py  test.py  testsoup.html  yahoofinance-api.py  yfinance_module.py
api/: deps.py
api/investments/: router.py  schemas.py  services.py
api/tickers/: router.py  schemas.py  services.py
api/users/: router.py  schemas.py  services.py
core/: config.py  database.py  models.py  security.py
