[project]
name = "finance-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["beautifulsoup4>=4.13.5", "requests>=2.32.5", "pandas>=2.3.2", "lxml>=6.0.1", "yfinance>=0.2.65", "fastapi>=0.116.1", "uvicorn>=0.35.0", "sqlalchemy[asyncio]>=2.0.43", "asyncpg>=0.30.0", "passlib[bcrypt]>=1.7.4", "python-jose>=3.5.0", "pydantic[email]>=2.11.7", "python-multipart>=0.0.20"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
